# Lonabot

./: .gitignore  .gitmodules  README.md  lona.py  pyproject.toml  requirements.txt
Tokens/: Add_your_tokens_here
coinaflip/: __main__.py  bot.py
lonabot/: .gitignore  __init__.py  __main__.py  birthdays.py  bot.py  botcommands.py  constants.py  database.py  heap.py  inlinereminder.py  schedreminder.py  utilities.py  utils.py
src/: bot.py  database.py  interact.py  main.py  number_helper.py
src/actions/: action.py  action_base.py  action_data.py  action_list.py
src/actions/custom/: HOWTO  template.py
src/actions/custom/0testbed/: test.py
src/actions/custom/admin/: actions.py  get_users.py  run_py.py  shut_down.py
src/actions/custom/avoidance/: wasnt_me.py
src/actions/custom/environment/: detect_annoyed.py  meme.py  naughty.py
src/actions/custom/friendly/: compliment.py  laugh.py
src/actions/custom/hello_bye/: bye.py  hello.py
src/actions/custom/hostile/: has_spoken.py  insult.py
src/actions/custom/last_resort/: answer_any_question.py
src/actions/custom/questions/: choose.py  how_are_you.py  how_long.py  how_many.py  (+5 more)
src/commands/: command_base.py  command_data.py  command_list.py
src/commands/custom/: color.py  convert.py  eval.py  friend.py  help.py  kys.py  mp3.py  pat.py  ping.py  start.py  urban_dictionary.py
src/messages/: message.py
src/tg_objects/: chat.py  file.py  message.py  user.py
src/users/: user.py  user_database.py
src/utils/: safe_eval.py  tokens.py
textobot/: __main__.py  bot.py  botcommands.py  text.py  textobot.py
(+9 files in other folders)
